--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "normalize.css": "^7.0.0",
     "unsplash-js": "^4.6.0",
     "vue": "^2.4.2",
+    "vue-analytics": "^5.1.1",
     "vue-awesome": "^2.3.3",
     "vue-img-loader": "^0.2.1",
     "vue-progressive-image": "^2.1.4",
