--- a/package.json
+++ b/package.json
@@ -1,77 +1,58 @@
 {
-  "name": "distolma.vue",
-  "version": "1.0.0",
-  "description": "A Vue.js project",
-  "author": "Dmitry Mostovoy <dmitry.mostovoy@idealscorp.com>",
+  "name": "app",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "node build/dev-server.js",
-    "start": "node build/dev-server.js",
-    "build": "node build/build.js",
-    "lint": "eslint --ext .js,.vue src"
+    "start": "vue-cli-service serve --open",
+    "build": "vue-cli-service build",
+    "test": "vue-cli-service test",
+    "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "normalize.css": "^7.0.0",
-    "unsplash-js": "^4.6.0",
-    "vue": "^2.4.2",
-    "vue-analytics": "^5.1.1",
-    "vue-awesome": "^2.3.3",
-    "vue-img-loader": "^0.2.1",
-    "vue-progressive-image": "^2.1.4",
-    "vuex": "^2.4.0"
+    "sanitize.css": "^5.0.0",
+    "unsplash-js": "^4.8.0",
+    "vue": "^2.5.13",
+    "vue-analytics": "^5.9.0",
+    "vue-awesome": "^2.3.4",
+    "vue-class-component": "^6.2.0",
+    "vue-progressive-image": "^2.4.4",
+    "vue-property-decorator": "^6.0.0",
+    "vuex": "^3.0.1",
+    "vuex-class": "^0.3.0"
   },
   "devDependencies": {
-    "autoprefixer": "^7.1.2",
-    "babel-core": "^6.22.1",
-    "babel-eslint": "^8.0.0",
-    "babel-loader": "^7.1.1",
-    "babel-plugin-transform-runtime": "^6.22.0",
-    "babel-preset-env": "^1.3.2",
-    "babel-preset-stage-2": "^6.22.0",
-    "babel-register": "^6.22.0",
-    "chalk": "^2.0.1",
-    "connect-history-api-fallback": "^1.3.0",
-    "copy-webpack-plugin": "^4.0.1",
-    "css-loader": "^0.28.0",
-    "cssnano": "^3.10.0",
-    "eslint": "^4.6.1",
-    "eslint-config-airbnb-base": "^12.0.0",
-    "eslint-friendly-formatter": "^3.0.0",
-    "eslint-import-resolver-webpack": "^0.8.1",
-    "eslint-loader": "^1.7.1",
-    "eslint-plugin-html": "^3.0.0",
-    "eslint-plugin-import": "^2.2.0",
-    "eventsource-polyfill": "^0.9.6",
-    "express": "^4.14.1",
-    "extract-text-webpack-plugin": "^3.0.0",
-    "file-loader": "^1.1.4",
-    "friendly-errors-webpack-plugin": "^1.1.3",
-    "html-webpack-plugin": "^2.28.0",
-    "http-proxy-middleware": "^0.17.3",
-    "node-sass": "^4.5.3",
-    "opn": "^5.1.0",
-    "optimize-css-assets-webpack-plugin": "^3.2.0",
-    "ora": "^1.2.0",
-    "rimraf": "^2.6.0",
+    "@types/jest": "^22.1.3",
+    "@vue/cli-plugin-babel": "^3.0.0-beta.1",
+    "@vue/cli-plugin-eslint": "^3.0.0-beta.1",
+    "@vue/cli-plugin-typescript": "^3.0.0-beta.1",
+    "@vue/cli-plugin-unit-jest": "^3.0.0-beta.1",
+    "@vue/cli-service": "^3.0.0-beta.1",
+    "@vue/eslint-config-prettier": "^3.0.0-beta.1",
+    "@vue/eslint-config-typescript": "^3.0.0-beta.1",
+    "@vue/test-utils": "^1.0.0-beta.12",
+    "babel-core": "^7.0.0-0",
+    "lint-staged": "^7.0.0",
+    "node-sass": "^4.7.2",
     "sass-loader": "^6.0.6",
-    "semver": "^5.3.0",
-    "shelljs": "^0.7.6",
-    "url-loader": "^0.5.8",
-    "vue-loader": "^13.0.4",
-    "vue-template-compiler": "^2.4.2",
-    "webpack": "^3.5.6",
-    "webpack-bundle-analyzer": "^2.2.1",
-    "webpack-dev-middleware": "^1.10.0",
-    "webpack-hot-middleware": "^2.18.0",
-    "webpack-merge": "^4.1.0"
-  },
-  "engines": {
-    "node": ">= 4.0.0",
-    "npm": ">= 3.0.0"
+    "ts-jest": "^22.0.4",
+    "vue-template-compiler": "^2.5.13"
   },
   "browserslist": [
     "> 1%",
     "last 2 versions",
     "not ie <= 8"
-  ]
+  ],
+  "gitHooks": {
+    "pre-commit": "lint-staged"
+  },
+  "lint-staged": {
+    "*.js": [
+      "vue-cli-service lint",
+      "git add"
+    ],
+    "*.vue": [
+      "vue-cli-service lint",
+      "git add"
+    ]
+  }
 }
