--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "distolma.github.io",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "private": false,
   "repository": "git@github.com:distolma/distolma.github.io.git",
   "author": "distolma <djmakaron2009@gmail.com>",
@@ -11,14 +11,15 @@
     "test": "vue-cli-service test",
     "lint": "vue-cli-service lint",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist -b master"
+    "deploy":
+      "cross-var gh-pages -d dist -b master -m Update $npm_package_version"
   },
   "dependencies": {
     "sanitize.css": "^5.0.0",
     "unsplash-js": "^4.8.0",
     "vue": "^2.5.13",
     "vue-analytics": "^5.9.0",
-    "vue-awesome": "^2.3.4",
+    "vue-awesome": "^2.3.5",
     "vue-class-component": "^6.2.0",
     "vue-progressive-image": "^2.4.4",
     "vue-property-decorator": "^6.0.0",
@@ -26,36 +27,30 @@
     "vuex-class": "^0.3.0"
   },
   "devDependencies": {
-    "@types/jest": "^22.1.3",
-    "@vue/cli-plugin-babel": "^3.0.0-beta.1",
-    "@vue/cli-plugin-eslint": "^3.0.0-beta.1",
-    "@vue/cli-plugin-typescript": "^3.0.0-beta.1",
-    "@vue/cli-plugin-unit-jest": "^3.0.0-beta.1",
-    "@vue/cli-service": "^3.0.0-beta.1",
-    "@vue/eslint-config-prettier": "^3.0.0-beta.1",
-    "@vue/eslint-config-typescript": "^3.0.0-beta.1",
+    "@types/jest": "^22.1.4",
+    "@vue/cli-plugin-babel": "^3.0.0-beta.3",
+    "@vue/cli-plugin-eslint": "^3.0.0-beta.3",
+    "@vue/cli-plugin-typescript": "^3.0.0-beta.3",
+    "@vue/cli-plugin-unit-jest": "^3.0.0-beta.3",
+    "@vue/cli-service": "^3.0.0-beta.3",
+    "@vue/eslint-config-prettier": "^3.0.0-beta.3",
+    "@vue/eslint-config-typescript": "^3.0.0-beta.3",
     "@vue/test-utils": "^1.0.0-beta.12",
     "babel-core": "^7.0.0-0",
+    "cross-var": "^1.1.0",
     "gh-pages": "^1.1.0",
     "lint-staged": "^7.0.0",
     "node-sass": "^4.7.2",
-    "sass-loader": "^6.0.6",
-    "ts-jest": "^22.0.4",
+    "sass-loader": "^6.0.7",
+    "ts-jest": "^22.4.1",
     "vue-template-compiler": "^2.5.13"
   },
-  "browserslist": [
-    "> 1%",
-    "last 2 versions",
-    "not ie <= 8"
-  ],
+  "browserslist": ["> 1%", "last 2 versions", "not ie <= 8"],
+  "gitHooks": {
+    "pre-commit": "lint-staged"
+  },
   "lint-staged": {
-    "*.js": [
-      "vue-cli-service lint",
-      "git add"
-    ],
-    "*.vue": [
-      "vue-cli-service lint",
-      "git add"
-    ]
+    "*.js": ["vue-cli-service lint", "git add"],
+    "*.vue": ["vue-cli-service lint", "git add"]
   }
 }
