--- a/package.json
+++ b/package.json
@@ -11,46 +11,55 @@
     "test": "vue-cli-service test",
     "lint": "vue-cli-service lint",
     "predeploy": "npm run build",
-    "deploy":
-      "cross-var gh-pages -d dist -b master -m 'Update $npm_package_version'"
+    "deploy": "cross-var gh-pages -d dist -b master -m 'Update $npm_package_version'"
   },
   "dependencies": {
     "sanitize.css": "^5.0.0",
     "unsplash-js": "^4.8.0",
-    "vue": "^2.5.13",
-    "vue-analytics": "^5.9.0",
+    "vue": "^2.5.16",
+    "vue-analytics": "^5.10.4",
     "vue-awesome": "^2.3.5",
     "vue-class-component": "^6.2.0",
-    "vue-progressive-image": "^2.4.4",
+    "vue-progressive-image": "^2.5.0",
     "vue-property-decorator": "^6.0.0",
     "vuex": "^3.0.1",
     "vuex-class": "^0.3.0"
   },
   "devDependencies": {
-    "@types/jest": "^22.1.4",
-    "@vue/cli-plugin-babel": "^3.0.0-beta.3",
-    "@vue/cli-plugin-eslint": "^3.0.0-beta.3",
-    "@vue/cli-plugin-typescript": "^3.0.0-beta.3",
-    "@vue/cli-plugin-unit-jest": "^3.0.0-beta.3",
-    "@vue/cli-service": "^3.0.0-beta.3",
-    "@vue/eslint-config-prettier": "^3.0.0-beta.3",
-    "@vue/eslint-config-typescript": "^3.0.0-beta.3",
-    "@vue/test-utils": "^1.0.0-beta.12",
+    "@types/jest": "^22.2.3",
+    "@vue/cli-plugin-babel": "^3.0.0-beta.9",
+    "@vue/cli-plugin-eslint": "^3.0.0-beta.9",
+    "@vue/cli-plugin-typescript": "^3.0.0-beta.9",
+    "@vue/cli-plugin-unit-jest": "^3.0.0-beta.9",
+    "@vue/cli-service": "^3.0.0-beta.9",
+    "@vue/eslint-config-prettier": "^3.0.0-beta.9",
+    "@vue/eslint-config-typescript": "^3.0.0-beta.9",
+    "@vue/test-utils": "^1.0.0-beta.15",
     "babel-core": "^7.0.0-0",
     "cross-var": "^1.1.0",
     "gh-pages": "^1.1.0",
-    "lint-staged": "^7.0.0",
-    "node-sass": "^4.7.2",
-    "sass-loader": "^6.0.7",
-    "ts-jest": "^22.4.1",
-    "vue-template-compiler": "^2.5.13"
+    "lint-staged": "^7.1.0",
+    "node-sass": "^4.9.0",
+    "sass-loader": "^7.0.1",
+    "ts-jest": "^22.4.5",
+    "vue-template-compiler": "^2.5.16"
   },
-  "browserslist": ["> 1%", "last 2 versions", "not ie <= 8"],
+  "browserslist": [
+    "> 1%",
+    "last 2 versions",
+    "not ie <= 8"
+  ],
   "gitHooks": {
     "pre-commit": "lint-staged"
   },
   "lint-staged": {
-    "*.js": ["vue-cli-service lint", "git add"],
-    "*.vue": ["vue-cli-service lint", "git add"]
+    "*.js": [
+      "vue-cli-service lint",
+      "git add"
+    ],
+    "*.vue": [
+      "vue-cli-service lint",
+      "git add"
+    ]
   }
 }
