--- a/package.json
+++ b/package.json
@@ -1,65 +1,68 @@
 {
   "name": "distolma.github.io",
-  "version": "0.1.1",
+  "version": "0.2.0",
   "private": false,
   "repository": "git@github.com:distolma/distolma.github.io.git",
   "author": "distolma <djmakaron2009@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "start": "vue-cli-service serve --open",
-    "build": "vue-cli-service build",
-    "test": "vue-cli-service test",
-    "lint": "vue-cli-service lint",
-    "predeploy": "npm run build",
-    "deploy": "cross-var gh-pages -d dist -b master -m 'Update $npm_package_version'"
-  },
-  "dependencies": {
-    "sanitize.css": "^5.0.0",
-    "unsplash-js": "^4.8.0",
-    "vue": "^2.5.16",
-    "vue-analytics": "^5.10.4",
-    "vue-awesome": "^2.3.5",
-    "vue-class-component": "^6.2.0",
-    "vue-progressive-image": "^2.5.0",
-    "vue-property-decorator": "^6.0.0",
-    "vuex": "^3.0.1",
-    "vuex-class": "^0.3.0"
+    "start": "parcel src/index.pug --open",
+    "build": "npm run clear && parcel build src/index.pug --experimental-scope-hoisting",
+    "build2": "yarn clear && node build.js",
+    "clear": "rimraf dist"
   },
   "devDependencies": {
-    "@types/jest": "^22.2.3",
-    "@vue/cli-plugin-babel": "^3.0.0-beta.9",
-    "@vue/cli-plugin-eslint": "^3.0.0-beta.9",
-    "@vue/cli-plugin-typescript": "^3.0.0-beta.9",
-    "@vue/cli-plugin-unit-jest": "^3.0.0-beta.9",
-    "@vue/cli-service": "^3.0.0-beta.9",
-    "@vue/eslint-config-prettier": "^3.0.0-beta.9",
-    "@vue/eslint-config-typescript": "^3.0.0-beta.9",
-    "@vue/test-utils": "^1.0.0-beta.15",
-    "babel-core": "^7.0.0-0",
-    "cross-var": "^1.1.0",
-    "gh-pages": "^1.1.0",
-    "lint-staged": "^7.1.0",
-    "node-sass": "^4.9.0",
-    "sass-loader": "^7.0.1",
-    "ts-jest": "^22.4.5",
-    "vue-template-compiler": "^2.5.16"
+    "@types/node": "^11.11.6",
+    "autoprefixer": "^9.5.0",
+    "eslint": "^5.15.3",
+    "husky": "^1.3.1",
+    "lint-staged": "^8.1.5",
+    "parcel-bundler": "^1.12.3",
+    "parcel-plugin-imagemin": "^2.1.3",
+    "parcel-plugin-svg-sprite": "^1.1.1",
+    "prettier": "^1.16.4",
+    "pug": "^2.0.3",
+    "rimraf": "^2.6.3",
+    "sass": "^1.17.3",
+    "stylelint": "^9.10.1",
+    "svgo": "^1.2.0",
+    "typescript": "^3.3.4000"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*._ts": [
+      "prettier --write",
+      "eslint --fix",
+      "git add"
+    ],
+    "*._scss": [
+      "stylelint --fix",
+      "git add"
+    ],
+    "*._svg": [
+      "svgo",
+      "git add"
+    ]
   },
   "browserslist": [
     "> 1%",
     "last 2 versions",
-    "not ie <= 8"
+    "not dead"
   ],
-  "gitHooks": {
-    "pre-commit": "lint-staged"
+  "postcss": {
+    "plugins": {
+      "autoprefixer": {}
+    }
   },
-  "lint-staged": {
-    "*.js": [
-      "vue-cli-service lint",
-      "git add"
-    ],
-    "*.vue": [
-      "vue-cli-service lint",
-      "git add"
-    ]
+  "eslintConfig": {
+    "rules": {}
+  },
+  "prettier": {
+    "singleQuote": true,
+    "trailingComma": "all"
   }
 }
