--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ sudo: false
 
 branches:
   only:
-    - master
+    - dev
 
 cache:
   directories:
@@ -22,7 +22,8 @@ deploy:
   provider: pages
   skip-cleanup: true
   github-token: $GITHUB_TOKEN
+  target-branch: master
   keep-history: true
   local_dir: dist
   on:
-    branch: master
+    branch: dev
