--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "rimraf": "^2.6.3",
     "sass": "^1.17.3",
     "stylelint": "^9.10.1",
+    "stylelint-config-recommended-scss": "^3.2.0",
+    "stylelint-scss": "^3.5.4",
     "svgo": "^1.2.0",
     "typescript": "^3.3.4000"
   },
@@ -37,11 +39,11 @@
       "eslint --fix",
       "git add"
     ],
-    "*._scss": [
+    "*.scss": [
       "stylelint --fix",
       "git add"
     ],
-    "*._svg": [
+    "*.svg": [
       "svgo",
       "git add"
     ]
@@ -62,5 +64,11 @@
   "prettier": {
     "singleQuote": true,
     "trailingComma": "all"
+  },
+  "stylelint": {
+    "plugins": [
+      "stylelint-scss"
+    ],
+    "extends": "stylelint-config-recommended-scss"
   }
 }
