--- a/package.json
+++ b/package.json
@@ -11,22 +11,28 @@
     "clear": "rimraf dist"
   },
   "devDependencies": {
-    "@types/node": "^11.11.6",
-    "autoprefixer": "^9.5.0",
-    "eslint": "^5.15.3",
-    "husky": "^1.3.1",
-    "lint-staged": "^8.1.5",
-    "parcel-bundler": "^1.12.3",
-    "parcel-plugin-svg-sprite": "^1.1.1",
-    "prettier": "^1.16.4",
-    "pug": "^2.0.3",
-    "rimraf": "^2.6.3",
-    "sass": "^1.17.3",
-    "stylelint": "^9.10.1",
-    "stylelint-config-recommended-scss": "^3.2.0",
-    "stylelint-scss": "^3.5.4",
-    "svgo": "^1.2.0",
-    "typescript": "^3.3.4000"
+    "@babel/core": "^7.8.6",
+    "@babel/preset-typescript": "^7.8.3",
+    "@types/node": "^13.7.7",
+    "@typescript-eslint/eslint-plugin": "^2.21.0",
+    "@typescript-eslint/parser": "^2.21.0",
+    "autoprefixer": "^9.7.4",
+    "eslint": "^6.8.0",
+    "eslint-config-prettier": "^6.10.0",
+    "eslint-plugin-prettier": "^3.1.2",
+    "husky": "^4.2.3",
+    "lint-staged": "^10.0.8",
+    "parcel-bundler": "^1.12.4",
+    "parcel-plugin-svg-sprite": "^1.4.1",
+    "prettier": "^1.19.1",
+    "pug": "^2.0.4",
+    "rimraf": "^3.0.2",
+    "sass": "^1.26.2",
+    "stylelint": "^13.2.0",
+    "stylelint-config-recommended-scss": "^4.2.0",
+    "stylelint-scss": "^3.14.2",
+    "svgo": "^1.3.2",
+    "typescript": "^3.8.3"
   },
   "husky": {
     "hooks": {
@@ -34,32 +40,44 @@
     }
   },
   "lint-staged": {
-    "*._ts": [
+    "src/**/*.ts": [
       "prettier --write",
       "eslint --fix",
       "git add"
     ],
-    "*.scss": [
+    "src/**/*.scss": [
       "stylelint --fix",
       "git add"
     ],
-    "*.svg": [
+    "src/**/*.svg": [
       "svgo",
       "git add"
     ]
   },
   "browserslist": [
-    "> 1%",
-    "last 2 versions",
-    "not dead"
+    "defaults"
   ],
   "postcss": {
     "plugins": {
       "autoprefixer": {}
     }
   },
+  "babel": {
+    "presets": ["@babel/preset-env", "@babel/preset-typescript"]
+  },
   "eslintConfig": {
-    "rules": {}
+    "extends": [
+      "plugin:@typescript-eslint/eslint-recommended",
+      "plugin:@typescript-eslint/recommended",
+      "prettier"
+    ],
+    "parser": "@typescript-eslint/parser",
+    "plugins": [
+      "prettier"
+    ],
+    "parserOptions": {
+      "sourceType": "module"
+    }
   },
   "prettier": {
     "singleQuote": true,
