--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,21 @@
-.DS_Store
-node_modules
-dist
+# build output
+dist/
 
-# local env files
-.env
-.env.local
-.env.*.local
+# generated types
+.astro/
 
-# Log files
+# dependencies
+node_modules/
+
+# logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+pnpm-debug.log*
 
-# Editor directories and files
-.idea
-.vscode
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-.cache
+# environment variables
+.env
+.env.production
+
+# macOS-specific files
+.DS_Store
