--- a/package.json
+++ b/package.json
@@ -1,101 +1,24 @@
 {
-  "name": "distolma.github.io",
-  "version": "0.2.0",
-  "private": false,
-  "repository": "git@github.com:distolma/distolma.github.io.git",
-  "author": "distolma <djmakaron2009@gmail.com>",
-  "license": "MIT",
+  "name": "astro-distolma",
+  "type": "module",
+  "version": "0.0.1",
   "scripts": {
-    "start": "parcel src/index.pug --open",
-    "build": "npm run clear && parcel build src/index.pug --experimental-scope-hoisting --public-url ./",
-    "clear": "rimraf dist"
+    "dev": "astro dev",
+    "start": "astro dev",
+    "build": "astro build",
+    "preview": "astro preview",
+    "astro": "astro"
+  },
+  "dependencies": {
+    "@fontsource/jaldi": "^5.0.8",
+    "astro": "^3.0.10",
+    "astro-icon": "^0.8.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.8.7",
-    "@babel/preset-typescript": "^7.9.0",
-    "@prettier/plugin-pug": "^1.2.0",
-    "@types/node": "^13.13.4",
-    "@typescript-eslint/eslint-plugin": "^2.30.0",
-    "@typescript-eslint/parser": "^2.30.0",
-    "autoprefixer": "^9.7.6",
-    "eslint": "^6.8.0",
-    "eslint-config-prettier": "^6.11.0",
-    "eslint-plugin-prettier": "^3.1.3",
-    "husky": "^4.2.5",
-    "lint-staged": "^10.1.7",
-    "parcel-bundler": "^1.12.4",
-    "parcel-plugin-svg-sprite": "^1.4.1",
-    "prettier": "^2.0.5",
-    "pug": "^2.0.4",
-    "rimraf": "^3.0.2",
-    "sass": "^1.26.5",
-    "stylelint": "^13.3.3",
-    "stylelint-config-recommended-scss": "^4.2.0",
-    "stylelint-scss": "^3.17.1",
-    "svgo": "^1.3.2",
-    "typescript": "^3.8.3"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
-  },
-  "lint-staged": {
-    "src/**/*.ts": [
-      "prettier --write",
-      "eslint --fix",
-      "git add"
-    ],
-    "src/**/*.scss": [
-      "prettier --write", 
-      "stylelint --fix",
-      "git add"
-    ],
-    "src/**/*.pug": [
-      "prettier --write",
-      "git add"
-    ],
-    "src/**/*.svg": [
-      "svgo",
-      "git add"
-    ]
-  },
-  "browserslist": [
-    "defaults"
-  ],
-  "postcss": {
-    "plugins": {
-      "autoprefixer": {}
-    }
-  },
-  "babel": {
-    "presets": [
-      "@babel/preset-env",
-      "@babel/preset-typescript"
-    ]
-  },
-  "eslintConfig": {
-    "extends": [
-      "plugin:@typescript-eslint/eslint-recommended",
-      "plugin:@typescript-eslint/recommended",
-      "prettier"
-    ],
-    "parser": "@typescript-eslint/parser",
-    "plugins": [
-      "prettier"
-    ],
-    "parserOptions": {
-      "sourceType": "module"
-    }
-  },
-  "prettier": {
-    "singleQuote": true,
-    "trailingComma": "all"
-  },
-  "stylelint": {
-    "plugins": [
-      "stylelint-scss"
-    ],
-    "extends": "stylelint-config-recommended-scss"
+    "@astrojs/tailwind": "^5.0.0",
+    "prettier": "3.0.3",
+    "prettier-plugin-astro": "^0.12.0",
+    "prettier-plugin-tailwindcss": "^0.5.4",
+    "tailwindcss": "^3.3.3"
   }
 }
