--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,6 +22,10 @@ jobs:
         uses: actions/checkout@v3
       - name: Install and build 🛠️
         uses: withastro/action@v0
+        with:
+          node-version: 18
+          package-manager: pnpm
+          pnpm-version: 8.x.x
 
   deploy:
     needs: build
