--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "prettier": "3.1.0",
     "prettier-plugin-astro": "^0.12.2",
     "prettier-plugin-tailwindcss": "^0.5.7",
-    "tailwindcss": "^3.3.5"
+    "tailwindcss": "^3.3.5",
+    "vite-plugin-mkcert": "^1.17.1"
   }
 }
