--- a/package.json
+++ b/package.json
@@ -22,5 +22,6 @@
     "prettier-plugin-tailwindcss": "^0.5.11",
     "tailwindcss": "^3.4.1",
     "vite-plugin-mkcert": "^1.17.3"
-  }
+  },
+  "packageManager": "pnpm@8.15.4"
 }
