Update Biome version and prettier-plugin-tailwindcss

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -41,7 +41,7 @@ jobs:
         run: pnpm dlx prettier --check ./src
 
       - name: Lint (Biome)
-        run: pnpm dlx @biomejs/biome check ./src
+        run: pnpm dlx @biomejs/biome ci ./src
 
       - name: Build
         run: pnpm run build
