--- a/package.json
+++ b/package.json
@@ -10,17 +10,17 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@fontsource/jaldi": "^5.1.0",
-    "astro": "^4.16.16",
-    "astro-icon": "^1.1.4"
+    "@fontsource/jaldi": "^5.1.1",
+    "astro": "^5.2.5",
+    "astro-icon": "^1.1.5"
   },
   "devDependencies": {
-    "@astrojs/tailwind": "^5.1.2",
     "@biomejs/biome": "1.9.4",
-    "prettier": "3.4.1",
+    "@tailwindcss/vite": "^4.0.6",
+    "prettier": "3.5.0",
     "prettier-plugin-astro": "^0.14.1",
-    "prettier-plugin-tailwindcss": "^0.6.9",
-    "tailwindcss": "^3.4.15",
+    "prettier-plugin-tailwindcss": "^0.6.11",
+    "tailwindcss": "^4.0.6",
     "vite-plugin-mkcert": "^1.17.6"
   },
   "packageManager": "pnpm@9.0.1"
