--- a/package.json
+++ b/package.json
@@ -23,5 +23,10 @@
     "tailwindcss": "^4.1.7",
     "vite-plugin-mkcert": "^1.17.8"
   },
-  "packageManager": "pnpm@10.3.0"
+  "packageManager": "pnpm@10.3.0",
+  "pnpm": {
+    "onlyBuiltDependencies": [
+      "@biomejs/biome"
+    ]
+  }
 }
